--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ APScheduler = "^3.9.1"
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
 python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
